--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script defer src="https://kit.fontawesome.com/b6a4e9e896.js"></script>
     <title>MyMusic</title>
   </head>
   <body>
